# SwarmFACE

./: .readthedocs.yaml  LICENSE  README.md  aMANIFEST.in  pyproject.toml  requirements.txt  setup.cfg
SwarmFACE/: __init__.py  esaL2.py  fac.py  fac_qi.py  find_3sat_conj.py  j1sat.py  j2satBI.py  j2satLS.py  j2satSVD.py  j3sat.py  mva1sat.py  utils.py
SwarmFACE/plot_save/: dual_sat_BI.py  dual_sat_LS.py  dual_sat_SVD.py  saveplot_qi.py  single_sat.py  single_sat_MVA.py  three_sat.py  three_sat_conj.py
docs/source/: SwarmFACE.plot_save.rst  SwarmFACE.rst  conf.py  index.rst  installation.rst  modules.rst
notebooks/: test_3sat_conj.ipynb  test_fac_qi.ipynb  test_j1sat.ipynb  test_j2satBI.ipynb  test_j2satLS.ipynb  test_j2satSVD.ipynb  test_j3sat.ipynb  test_mva1sat.ipynb
notebooks/.ipynb_checkpoints/: test_j1sat-checkpoint.ipynb  test_j2satLS-checkpoint.ipynb
