[metadata]
name = SwarmFACE
version = 0.0.1
author = Adrian Blagau, Joachim Vogt
author_email = blagau@spacescience.ro
description = Pyrhon package for field-aligned current exploration with Swarm
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pyFACES/
# project_urls =
#     Bug Tracker = https://github.com/pyFACES
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
# packages = [SwarmFACE, plot_and_save]

[options.packages.find]
# This section is optional
# Each entry in this section is optional, and if not specified, the default values are:
# `where=.`, `include=*` and `exclude=` (empty).
include=SwarmFACE*

# install_requires =
#    requests
#    importlib-metadata; python_version < "3.8"


# [options.packages.find]
# where = SwarmFACE



