[metadata]
name = SwarmFACE
version = 0.3.0
author = Adrian Blagau, Joachim Vogt
author_email = blagau@spacescience.ro
description = Python package for field-aligned current exploration with Swarm
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
# packages = [SwarmFACE, plot_and_save]

[options.packages.find]
# This section is optional
# Each entry in this section is optional, and if not specified, the default values are:
# `where=.`, `include=*` and `exclude=` (empty).
include=SwarmFACE*




